# uvlog

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  readthedocs.yaml  setup.cfg  tox.ini
.github/workflows/: release.yaml  tests.yaml
docs/: requirements.txt
docs/source/: compatibility.rst  conf.py  extension.rst  faq.rst  guide.rst  index.rst  quickstart.rst  reference.rst
docs/source/_static/css/: functions.css
docs/source/_templates/: globaltoc.html
src/uvlog/: __init__.py  formatters.py  handlers.py  uvlog.py
tests/: benchmark.py  test_compatibility.py  test_formatters.py  test_handlers.py  test_loggers.py
