[metadata]
name = uvlog
version = attr: uvlog.__version__
description = Pythonic logger with better performance and contextvars + JSON support out of the box
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/violet-black/uvlog
author = violetblackdev@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
keywords =
    logging
    logs

[options]
package_dir=
    =src
packages = find:
exclude =
    tests*
python_requires = >=3.8
install_requires =

[options.entry_points]
console_scripts =

[options.extras_require]
test=
    pytest
    coverage
dev =
    pip-tools
    tox
    coverage
    mypy
    isort
    black
docs=
    sphinx
    python_docs_theme
    m2r2

[options.packages.find]
where=src

[build-system]
requires =
    setuptools
    wheel
build-backend = "setuptools.build_meta"

[flake8]
max-line-length = 125
max-doc-length = 135
select = E
ignore = E704